add cachebuster task

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/styles.css">
+<link rel="stylesheet" href="../css/styles.css?cb=12345678910">
 
 <!-- Google Tag Manager -->
 <script>
